several comments added

--- a/codingTestIndex.html
+++ b/codingTestIndex.html
@@ -35,6 +35,7 @@
 		<br/> 
 		<em>note: if you enter a number with decimals it will be rounded to the lowest value.</em>
 		</p>
+		<!-- Input data interface, with the input text box and the needed buttons -->
 		<div class="input_data">
 			<form action ="" method="POST" id="form" onsubmit="return false;"> 
 				<label for="number">Add a number to the list:</label><br/>
@@ -48,13 +49,15 @@
 				<button id="reset">Reset</button>
 			</form>
 		</div>
+		<!-- Box given numbers list -->
 		<div class="input_data number_list_box">
 			<h3>Number list</h3>
 			<hr>
 			<ul id="number_list">
 			</ul>
 		</div>
-		<div class="input_data number_list_box result_box">
+		<!-- Box for the results pairs and singles lists and the sum -->
+ 		<div class="input_data number_list_box result_box">
 			<h3>Result:</h3>
 			<hr>
 			<h4>Pairs:</h4>
